5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1637_2447.log
== TEST (2019-04-09 11:17:26) 
-- CODE:
x=float(input("preco: "))
y=float(input("pagamento: "))

if(x>y):
	falta= x-y
	print(round(falta,2))
else(y>x):
	troco= y-x
	print(round(troco,2))
-- ERROR:
File "XXXX", line 7
    else(y>x):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:18:29) 
-- CODE:
x=float(input("preco: "))
y=float(input("pagamento: "))

if(x>y):
	falta= "x-y"
	print(round(falta,2))
else(y>x):
	troco= "y-x"
	print(round(troco,2))
-- ERROR:
File "XXXX", line 7
    else(y>x):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:20:01) 
-- CODE:
x=float(input("preco: "))
y=float(input("pagamento: "))

if(x>y):
	falta= x-y
	print("Falta"round(falta,2))
else(y>x):
	troco= y-x
	print("Troco"round(troco,2))
-- ERROR:
File "XXXX", line 6
    print("Falta"round(falta,2))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:20:27) 
-- CODE:
x=float(input("preco: "))
y=float(input("pagamento: "))

if(x>y):
	Falta= x-y
	print("Falta"round(Falta,2))
else(y>x):
	Troco= y-x
	print("Troco"round(Troco,2))
-- ERROR:
File "XXXX", line 6
    print("Falta"round(Falta,2))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:20:53) 
-- CODE:
x=float(input("preco: "))
y=float(input("pagamento: "))

if(x>y):
	Falta= x-y
	print("Falta",round(Falta,2))
else(y>x):
	Troco= y-x
	print("Troco",round(Troco,2))
-- ERROR:
File "XXXX", line 7
    else(y>x):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:22:07) 
-- CODE:
x=float(input("preco: "))
y=float(input("pagamento: "))

if(x>y):
	Falta= x-y
	print("Falta",round(Falta,2))
else:
	Troco= y-x
	print("Troco",round(Troco,2))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:22:48) 
-- CODE:
x=float(input("preco: "))
y=float(input("pagamento: "))

if(x>y):
	Falta= x-y
	print("Falta de",round(Falta,2))
else:
	Troco= y-x
	print("Troco de",round(Troco,2))
-- OUTPUT:
Falta de 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:23:00) 
-- CODE:
x=float(input("preco: "))
y=float(input("pagamento: "))

if(x>y):
	Falta= x-y
	print("Falta de",round(Falta,2))
else:
	Troco= y-x
	print("Troco de",round(Troco,2))
-- EXECUTION TIME:
0.131198
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta de 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:23:06) 
-- CODE:
x=float(input("preco: "))
y=float(input("pagamento: "))

if(x>y):
	Falta= x-y
	print("Falta de",round(Falta,2))
else:
	Troco= y-x
	print("Troco de",round(Troco,2))
-- OUTPUT:
Falta de 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:23:20) 
-- CODE:
x=float(input("preco: "))
y=float(input("pagamento: "))

if(x>y):
	Falta= x-y
	print("Falta de",round(Falta,2))
else:
	Troco= y-x
	print("Troco de",round(Troco,2))
-- EXECUTION TIME:
0.191262
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta de 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:23:55) 
-- CODE:
x=float(input("preco: "))
y=float(input("pagamento: "))

if(x>y):
	Falta= x-y
	print("Falta de",round(Falta,2))
else:
	Troco= y-x
	print("Troco de",round(Troco,2))
-- OUTPUT:
Falta de 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:24:33) 
-- CODE:
x=float(input("preco: "))
y=float(input("pagamento: "))

if(x>y):
	Falta= x-y
	print("Falta de",round(Falta,2)) 
	
else:
	Troco= y-x
	print("Troco de",round(Troco,2))
-- EXECUTION TIME:
0.126987
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta de 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:25:12) 
-- CODE:
x=float(input("preco: "))
y=float(input("pagamento: "))

if(x>y):
	Falta= x-y
	print("Falta",round(Falta,2)) 
	
else:
	Troco= y-x
	print("Troco de",round(Troco,2))
-- EXECUTION TIME:
0.18665
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
preco: pagamento: Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
preco: pagamento: Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:25:15) 
-- CODE:
x=float(input("preco: "))
y=float(input("pagamento: "))

if(x>y):
	Falta= x-y
	print("Falta",round(Falta,2)) 
	
else:
	Troco= y-x
	print("Troco de",round(Troco,2))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:25:28) 
-- CODE:
x=float(input("preco: "))
y=float(input("pagamento: "))

if(x>y):
	Falta= x-y
	print("Falta",round(Falta,2)) 
	
else:
	Troco= y-x
	print("Troco de",round(Troco,2))
-- EXECUTION TIME:
0.162011
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
